<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".ForgotPassword"
    android:background="@drawable/as2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_margin="20dp"
        android:background="@drawable/layout_background_rounded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <TextView
            android:id="@+id/txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="35sp"
            android:textColor="@color/black"
            android:text="@string/app_name"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp">
        </TextView>

        <TextView
            android:id="@+id/fort"
            android:layout_below="@+id/txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:text="@string/fpass"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp">
        </TextView>

        <TextView
            android:id="@+id/tesxt"
            android:layout_below="@+id/fort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/res_txt"
            android:textSize="15sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp">
        </TextView>

        <EditText
            android:id="@+id/res_em"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tesxt"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/em">
        </EditText>

        <Button
            android:layout_below="@+id/res_em"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:id="@+id/btn_reset"
            android:text="@string/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">
        </Button>

        <TextView
            android:id="@+id/ret_log"
            android:layout_below="@+id/btn_reset"
            android:textColor="@color/blue"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login Here">
        </TextView>

    </RelativeLayout>

    </ScrollView>

</RelativeLayout>